Revert "Merge master fix conflicts"
This reverts commit 3977aa98b54f3d0ba391cb349641a8de3419c30e, reversing
changes made to f21624b3c8b91f1ac8e9a9d19ad6e2a205bfea1c.