@@ -10,6 +10,8 @@ import uk.gov.hmcts.sptribs.ciccase.model.State;
 import java.util.List;
 import java.util.Objects;
 
+import static java.util.stream.Collectors.toList;
+
 @Component
 @Slf4j
 public class CaseDetailsListConverter {
@@ -32,6 +34,6 @@ public class CaseDetailsListConverter {
                 }
             })
             .filter(Objects::nonNull)
-            .toList();
+            .collect(toList());
     }
 }
